--- a/src/scss/components/_home-about.scss
+++ b/src/scss/components/_home-about.scss
@@ -78,7 +78,7 @@
                 background-color: transparent;
                 border: 1px solid rgb(196, 196, 196);
                 transition: 0.5s ease-in-out;
-                cursor: none !important;
+                cursor: pointer !important;
 
                 color: #323232;
                 font-weight: 600;
