--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -47,18 +47,13 @@ $menu-button-bar-height: 1px;
         text-transform: uppercase;
         font-size: 2.3rem;
         text-decoration: none;
+        cursor: pointer !important;
 
         &a:hover,
         a:visited,
         a:link,
         a:active {
           text-decoration: none;
-        }
-
-        &a:hover {
-          .cursor {
-            background-color: red;
-          }
         }
       }
       @media (max-width: $layout-breakpoint-small) {
@@ -81,6 +76,7 @@ $menu-button-bar-height: 1px;
       font-size: clamp(1rem, 5.5vw, 1.6rem);
       text-transform: uppercase;
       color: $white;
+      cursor: pointer !important;
 
       //Display none after certain view width
       @media (max-width: $layout-breakpoint-small) {
