--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -25,6 +25,7 @@ $white-text-hover: rgb(202, 202, 202);
 $wrapper-value: 12vw;
 $wrapper-value-breakpoint-small: 8vw;
 $wrapper-value-navbar: 5vw;
+$wrapper-value-navbar-breakpoint-medium: 3vw;
 
 
 
