--- a/src/scss/components/_home-about.scss
+++ b/src/scss/components/_home-about.scss
@@ -1,4 +1,8 @@
+$layout-breakpoint-home-about: 1150px;
+
 .home-about {
+  width: 100%;
+  // height: 80vh;
   visibility: hidden;
   margin-block: 30vh;
 
@@ -11,21 +15,26 @@
     .home-about-inner {
       display: grid;
       grid-template-columns: 40% 60%;
+      grid-column-gap: 2vw;
       width: 100%;
 
       .home-about-content {
+        display: table;
+        width: 100%;
         position: relative;
-        width: 90%;
+        width: 100%;
 
         .home-about-content-inner {
           width: 100%;
           color: #323232;
+          display: table-cell;
+          vertical-align: middle;
 
           h1 {
             position: relative;
             font-weight: 500;
-
             margin-bottom: 24px;
+
             .home-about-content-line {
               font-size: 2.8rem;
               margin: 0;
@@ -34,6 +43,10 @@
 
               @media (max-width: $layout-breakpoint-medium) {
                 font-size: 2.5rem;
+              }
+
+              @media (max-width: $layout-breakpoint-home-about) {
+                font-size: 2.1rem;
               }
 
               .home-about-content-line-inner {
@@ -45,6 +58,10 @@
                   @media (max-width: $layout-breakpoint-medium) {
                     font-size: 2.6rem;
                   }
+
+                  @media (max-width: $layout-breakpoint-home-about) {
+                    font-size: 2.2rem;
+                  }
                 }
               }
             }
@@ -53,7 +70,7 @@
           p {
             margin-block: 3em;
             font-size: 1.43rem;
-            line-height: 24px;
+            line-height: 30px;
             font-weight: 300;
             padding-right: 48px;
 
@@ -86,9 +103,9 @@
                 font-family: inherit;
 
                 @media (max-width: $layout-breakpoint-medium) {
-                  padding-block: .8rem;
-                  padding-inline: 2.5rem;   
-                  font-size: 1.3rem;               
+                  padding-block: 0.8rem;
+                  padding-inline: 2.5rem;
+                  font-size: 1.3rem;
                 }
 
                 &:hover {
@@ -102,38 +119,49 @@
         }
       }
       .home-about-images {
-        width: 100%;
-        position: relative;
-
-        .home-about-images-inner {
-          display: flex;
+        .home-about-images-container {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-column-gap: 2vw;
+          width: 100%;
+          position: relative;
           .image-container {
-            flex: 48%;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
-            position: absolute;
+
+            @media (max-width: $layout-breakpoint-medium) {
+              position: absolute;
+            }
 
             &.left {
-              top: 0px;
-              left: 0px;
-              width: 48%;
-
               @media (max-width: $layout-breakpoint-medium) {
-                top: 0px;
-                left: 0px;
-                width: 54%;
+                position: relative;
+                top: -10%;
+                left: 10%;
+                width: 100%;
+              }
+
+              @media (max-width: $layout-breakpoint-home-about) {
+                position: relative;
+                width: 170%;
+                margin-inline: 20%;
+                left: 0;
+                right: 0;
+                top: 0;
               }
             }
 
             &.right {
-              z-index: 2;
-              top: 0px;
-              right: 0px;
-              width: 48%;
-
               @media (max-width: $layout-breakpoint-medium) {
-                top: 20%;
-                right: 0px;
-                width: 54%;
+                position: relative;
+                top: 30%;
+                right: 10%;
+                width: 100%;
+              }
+
+              @media (max-width: $layout-breakpoint-home-about) {
+                display: none;
               }
             }
 
@@ -143,6 +171,48 @@
           }
         }
       }
+      // .home-about-images {
+      //   width: 100%;
+      //   position: relative;
+
+      //   .home-about-images-inner {
+      //     display: flex;
+      //     .image-container {
+      //       flex: 48%;
+      //       overflow: hidden;
+      //       position: absolute;
+
+      //       &.left {
+      //         top: 0px;
+      //         left: 0px;
+      //         width: 48%;
+
+      //         @media (max-width: $layout-breakpoint-medium) {
+      //           top: 0px;
+      //           left: 0px;
+      //           width: 54%;
+      //         }
+      //       }
+
+      //       &.right {
+      //         z-index: 2;
+      //         top: 0px;
+      //         right: 0px;
+      //         width: 48%;
+
+      //         @media (max-width: $layout-breakpoint-medium) {
+      //           top: 20%;
+      //           right: 0px;
+      //           width: 54%;
+      //         }
+      //       }
+
+      //       .image {
+      //         width: 100%;
+      //       }
+      //     }
+      //   }
+      // }
     }
   }
 }
