--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -3,7 +3,7 @@ $portfolioImage: url("../../assets/images/image-3-banner.jpeg");
 $aboutImage: url("../../assets/images/image_3_menu.jpeg");
 $motionImage: url("../../assets/images/image_4_menu.jpeg");
 
-$footer-menu-font-size: 2rem;
+$footer-menu-font-size: 1.6rem;
 
 .navbar-menu {
     top: 0;
@@ -43,7 +43,7 @@ $footer-menu-font-size: 2rem;
                 text-align: left;
 
                 .navlink-container {
-                    padding-bottom: 5em;
+                    padding-bottom: 5.3em;
                     cursor: pointer !important;
 
                     //Disables padding on bottom for the last child
@@ -141,37 +141,6 @@ $footer-menu-font-size: 2rem;
                 }
             }
 
-            // .footer-socials {
-            //     position: absolute;
-            //     left: 50%;
-            //     transform: translate(-50%, 0);
-
-            //     a {
-            //         color: $white;
-            //         text-transform: uppercase;
-            //         font-size: $footer-menu-font-size;
-            //         padding-inline: 1.5em;
-            //         text-decoration: none;
-            //         letter-spacing: 2px;
-            //     }
-            //     // display: flex;
-
-            //     // .social-icon {
-            //     //     transition: 0.3s ease-in-out;
-            //     //     font-size: calc(clamp(1.5rem, 7vw, 2rem) * 0.875);
-            //     //     color: $white;
-            //     //     padding-inline: 1.3em;
-
-            //     //     &:first-child {
-            //     //         padding-left: 0px !important;
-            //     //     }
-
-            //     //     &:hover {
-            //     //         color: rgb(199, 199, 199);
-            //     //     }
-            //     // }
-            // }
-
             .footer-copyright {
                 color: $white;
                 font-size: $footer-menu-font-size;
@@ -193,43 +162,12 @@ $footer-menu-font-size: 2rem;
                 align-items: center;
                 justify-content: space-between;
 
-                @media (max-width: $layout-breakpoint-xsmall) {
-                    display: block;
-                }
-
-                .footer-socials-responsive {
-                    display: flex;
-
-                    @media (min-width: $layout-breakpoint-xsmall) {
-                        align-items: center;
-                        justify-content: space-between;
-                    }
-
-                    .menu-text-divider {
-                        color: $white;
-                        padding-inline: 2vw;
-                    }
-
-                    .social-link-responsive {
-                        font-size: 1.3rem;
-                        color: $white;
-                        text-decoration: none;
-
-                        &:hover {
-                            transition: 0.3s ease-in-out;
-                            color: $white-text-hover;
-                        }
-                    }
-                }
-                .local-time-footer {
+                .local-time-footer, .footer-copyright-responsive {
                     width: auto;
                     display: block;
-                    font-size: 1.5rem;
+                    font-size: 1.3rem;
                     color: $white;
-
-                    @media (max-width: $layout-breakpoint-xsmall) {
-                        display: none;
-                    }
+                    letter-spacing: .5px;
                 }
             }
         }
