--- a/src/scss/components/_home-about-responsive.scss
+++ b/src/scss/components/_home-about-responsive.scss
@@ -45,14 +45,14 @@ $layout-breakpoint-home-about: 1150px;
                     vertical-align: middle;
 
                     .who-am-i {
-                        font-size: 4.5rem;
+                        font-size: 5.5rem;
                         color: $black;
                         font-weight: 700;
                         padding-bottom: 2rem;
                         letter-spacing: 2px;
 
                         @media (max-width: $layout-breakpoint-xsmall) {
-                            font-size: 4rem;
+                            font-size: 5rem;
                         }
                     }
                     
@@ -79,7 +79,7 @@ $layout-breakpoint-home-about: 1150px;
                                     font-weight: 700;
 
                                     @media (max-width: $layout-breakpoint-xsmall) {
-                                        font-size: 2rem;
+                                        font-size: 2.3rem;
                                     }
                                 }
                             }
@@ -92,6 +92,10 @@ $layout-breakpoint-home-about: 1150px;
                         line-height: 30px;
                         font-weight: 300;
                         padding-right: 48px;
+
+                        @media (max-width: $layout-breakpoint-xsmall) {
+                            padding-right: 0px;
+                        }
                     }
 
                     .home-about-buttons {
