--- a/src/scss/components/_page-loader.scss
+++ b/src/scss/components/_page-loader.scss
@@ -14,8 +14,12 @@
   .pageloader-inner {
     text-align: center;
     .pageloader-text {
-      font-size: calc(clamp(4.5rem, 7vw, 6rem) * 0.875);
+      font-size: calc(clamp(4rem, 7vw, 5.3rem) * 0.875);
       color: white;
+
+      &.responsive {
+        font-size: 2.7rem;
+      }
 
       &::first-letter {
         text-transform:capitalize;
